--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,10 @@
                     <ul>
                         <li><a href="#">空运进口</a></li>
                         <li><a href="#">空运出口</a></li>
+                        <li><a href="#">陆运进口</a></li>
+                        <li><a href="#">陆运出口</a></li>
+                        <li><a href="#">海运进口</a></li>
+                        <li><a href="#">海运出口</a></li>
                     </ul>
                 </li>
             </ul>
