--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <script src="~/js/jquery-1.8.2.min.js"></script>
     <script src="~/js/hoverIntent.js"></script>
     <script src="~/js/superfish.js"></script>
-
+    <link href="~/Content/iconfont/iconfont.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
