--- a/Views/Order/Index.cshtml
+++ b/Views/Order/Index.cshtml
@@ -1,3 +1,83 @@
-﻿
+﻿<div class="ibox-content">
+    <div class="table-responsive">
 
+        <table class="easyui-datagrid" title="数据" style=""
+               data-options="
+                                   rownumbers:true,
+                                   singleSelect:true,
+                        
+                                   method:'get',
+                                   toolbar:'#tb',
+                                   pagination:true ">
+            <thead data-options="frozen:true">
+                <tr>
+                    <th data-options="field:'STORERKEY',sortable:true,width:100">STORERKEY</th>
+                    <th data-options="field:'productid',width:120">Product</th>
+                </tr>
+            </thead>
+            <thead>
+                <tr>
+                    <th data-options="field:'listprice',width:90,align:'right'">List Price</th>
+                    <th data-options="field:'unitcost',width:90,align:'right'">Unit Cost</th>
+                    <th data-options="field:'attr1',width:230">Attribute</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                    <th data-options="field:'status',width:60,align:'center'">Status</th>
+                </tr>
+            </thead>
+        </table>
 
+        <div id="tb" style="padding:2px 5px;">
+            <div class="tb_search">
+                Date From: <input class="easyui-datebox" style="width:110px">
+                To: <input class="easyui-datebox" style="width:110px">
+                Language:
+                <select class="easyui-combobox" panelheight="auto" style="width:100px">
+                    <option value="java">Java</option>
+                    <option value="c">C</option>
+                    <option value="basic">Basic</option>
+                    <option value="perl">Perl</option>
+                    <option value="python">Python</option>
+                </select>
+
+                Date From: <input class="easyui-datebox" style="width:110px">
+                To: <input class="easyui-datebox" style="width:110px">
+                Language:
+                <select class="easyui-combobox" panelheight="auto" style="width:100px">
+                    <option value="java">Java</option>
+                    <option value="c">C</option>
+                    <option value="basic">Basic</option>
+                    <option value="perl">Perl</option>
+                    <option value="python">Python</option>
+                </select>
+                <a href="#" class="easyui-linkbutton" iconcls="icon-search">Search</a>
+            </div>
+            <div class="tb_but">
+                <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-plus',plain:true" onclick="append()">新增</a>
+                <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-remove',plain:true" onclick="removeit()">删除</a>
+                <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-save',plain:true" onclick="accept()">保存</a>
+                <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-undo',plain:true" onclick="reject()">取消</a>
+                <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-paperclip',plain:true" onclick="importexcel()">EXCEL 导入</a>
+                <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-download-alt',plain:true" onclick="exportexcel()">导出 Excel</a>
+                <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-refresh',plain:true" onclick="reload()">刷新</a>
+            </div>
+        </div>
+
+    </div>
+    <!-- end ibox-content -->
+</div>
