--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -44,13 +44,13 @@
             </ul>
         </div>
     </div>
-    <div class="container" style="height:600px">
+    <div class="container" style="min-height:600px;">
         @RenderSection("featured", required: false)
         <section class="content-wrapper main-content clear-fix">
             @RenderBody()
         </section>
     </div>
-    <div style="background-color: #CFDEFF; height: 70px; ">
+    <div style="background-color: #CFDEFF; height: 70px;width:100%;margin-top:5px; ">
         <div class="container">
             <table class="table" style="margin-bottom:0px">
                 <tr>
