--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
     <link href="~/Content/bootstrap32/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/common.css" rel="stylesheet" />
     <link href="~/css/superfish.css" rel="stylesheet" />
+    @Styles.Render("~/font-awesome/css")
+    @Styles.Render("~/font-awesome3.2/css")
     @Styles.Render("~/easyui/css")
     <script src="~/js/jquery-1.8.2.min.js"></script>
     <script src="~/js/hoverIntent.js"></script>
