--- a/Views/Order/Index.cshtml
+++ b/Views/Order/Index.cshtml
@@ -1,29 +1,56 @@
 ﻿<div class="ibox-content">
     <div class="table-responsive">
-
-        <table id="dg" class="easyui-datagrid" title="Cache Editor for DataGrid" style="width:700px;height:auto"
-               data-options="
-				iconCls: 'icon-edit',
-				singleSelect: true,
-				toolbar: '#tb',
-                dataType : 'json',
-				url: 'Order/GetData',
-				method: 'get',
-                pagination:true
-               ">
+        <table id="dg" class="easyui-datagrid" title="数据" style=""
+               data-options=" rownumbers:true,
+                                   url: '/Order/GetData',
+                                   dataType : 'json',
+                                   method:'get',
+                                   toolbar:'#tb',
+                                   pagination:true ">
+            <thead data-options="frozen:true">
+                <tr>
+                    <th data-options="field: 'ck', checkbox: true"></th>
+                    <th data-options="field:'ID',sortable:true,width:200,align:'center'">ID</th>
+                    <th data-options="field:'BUSIUNITNAME',sortable:true,width:200,align:'center'">收货人</th>
+                    <th data-options="field:'TOTALNO',width:100,align:'center'">总单号</th>
+                    <th data-options="field:'DIVIDENO',width:100,align:'center'">分单号</th>
+                    <th data-options="field:'GOODSNUM',width:50,align:'center'">总件数</th>
+                    <th data-options="field:'GOODSWEIGHT',width:50,align:'center'">总重量</th>
+                </tr>
+            </thead>
             <thead>
                 <tr>
-                    <th data-options=" field:'ID',width:80">
-                        Item ID
-                    </th>
-                    <th data-options="field:'productid',width:100,
-						">
-                        Product
-                    </th>
-                    <th data-options="field:'listprice',width:80,align:'right',editor:{type:'numberbox',options:{precision:1}}">List Price</th>
-                    <th data-options="field:'unitcost',width:80,align:'right',editor:'numberbox'">Unit Cost</th>
-                    <th data-options="field:'attr1',width:250,editor:'text'">Attribute</th>
-                    <th data-options="field:'status',width:60,align:'center',editor:{type:'checkbox',options:{on:'P',off:''}}">Status</th>
+                    <th data-options="field:'DECLSHEETNUM',width:70,align:'center'">报关单张数</th>
+                    <th data-options="field:'LAWCONDITION',width:70,align:'center'">是否法检</th>
+                    <th data-options="field:'ASSOCIATEPEDECLNO',width:180,align:'center'">报关单号</th>
+                    <th data-options="field:'listprice',width:100,align:'center'">理单时间</th>
+                    <th data-options="field:'listprice',width:100,align:'center'">报关时间</th>
+                    <th data-options="field:'listprice',width:100,align:'center'">单证放行时间</th>
+                    <th data-options="field:'ASSOCIATETRADEWAY',width:150,align:'center'">贸易方式</th>
+                    <th data-options="field:'listprice',width:120,align:'center'">报关备注</th>
+                    <th data-options="field:'CLEARANCENO',width:180,align:'center'">通关单号</th>
+                    <th data-options="field:'listprice',width:90,align:'center'">理单人</th>
+                    <th data-options="field:'unitcost',width:100,align:'center'">单证齐全时间</th>
+                    <th data-options="field:'attr1',width:100,align:'center'">实物放行时间</th>
+                    <th data-options="field:'status',width:100,align:'center'">实物放行状态</th>
+                    <th data-options="field:'YWBH',width:100,align:'center'">业务编号</th>
+                    <th data-options="field:'CONTRACTNO',width:100,align:'center'">合同/发票号</th>
+                    <th data-options="field:'TURNPRENO',width:100,align:'center'">转关转录单号</th>
+                    <th data-options="field:'status',width:100,align:'center'">转关号</th>
+                    <th data-options="field:'status',width:100,align:'center'">OPS接单备注</th>
+                    <th data-options="field:'status',width:100,align:'center'">作业单时间</th>
+                    <th data-options="field:'status',width:60,align:'center'">普货</th>
+                    <th data-options="field:'status',width:60,align:'center'">快件</th>
+                    <th data-options="field:'status',width:100,align:'center'">单证放行人</th>
+                    <th data-options="field:'status',width:100,align:'center'">实物放行人</th>
+                    <th data-options="field:'status',width:100,align:'center'">关务状态</th>
+                    <th data-options="field:'status',width:70,align:'center'">分批放行</th>
+                    <th data-options="field:'status',width:70,align:'center'">申请放行</th>
+                    <th data-options="field:'CUSTOMDISTRICTCODE',width:100,align:'center'">关区代码</th>
+                    <th data-options="field:'status',width:100,align:'center'">海关通关状态</th>
+                    <th data-options="field:'status',width:100,align:'center'">签收号</th>
+                    <th data-options="field:'status',width:100,align:'center'">签收人</th>
+                    <th data-options="field:'status',width:100,align:'center'">签收日期</th>
                 </tr>
             </thead>
         </table>
@@ -55,6 +82,7 @@
             </div>
             <div class="tb_but">
                 <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-plus',plain:true" onclick="append()">新增</a>
+                <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-plus',plain:true" onclick="Edit()">修改</a>
                 <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-remove',plain:true" onclick="removeit()">删除</a>
                 <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-save',plain:true" onclick="accept()">保存</a>
                 <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-undo',plain:true" onclick="reject()">取消</a>
@@ -76,6 +104,32 @@
         //$('#dg').datagrid('loadData', {
         //    "total": 50
         //});
+
+
+
     })
+
+
+    function Edit() {
+
+        debugger;
+
+    }
+
+    $(function () {
+
+        //双击事件
+        $('#dg').datagrid({
+            onDblClickCell: function (index, field, value) {
+                debugger;
+                window.location.href = "/Order/Ini_Base_Data";
+                //self.location = "/Order/Edit";
+                //$(this).datagrid('beginEdit', index);
+                //var ed = $(this).datagrid('getEditor', { index: index, field: field });
+                //$(ed.target).focus();
+            }
+        });
+
+    });
 
 </script>
