webconfig自己的数据库

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
         </div>
         <div>
             <ul class="sf-menu" id="na_menu" style="font-size:14px">
-                @*@Html.Action("Header", "Common")*@
+                @*@Html.Action("Header", "Common")/Common/ImportOrder?busitype=11*@
                 <li>
                     <a href="#">现场关务</a>
                     <ul>
@@ -42,6 +42,9 @@
                         <li><a href="#">海运进口</a></li>
                         <li><a href="#">海运出口</a></li>
                     </ul>
+                </li>
+                <li>
+                    <a href="#">同步数据</a>                     
                 </li>
             </ul>
         </div>
