--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,9 +31,12 @@
         </div>
         <div>
             <ul class="sf-menu" id="na_menu" style="font-size:14px">
+                <li>
+                    <a href="#">同步数据</a>
+                </li>
                 @*@Html.Action("Header", "Common")/Common/ImportOrder?busitype=11*@
                 <li>
-                    <a href="#">现场关务</a>
+                    <a href="#">关务操作</a>
                     <ul>
                         <li><a href="#">空运进口</a></li>
                         <li><a href="#">空运出口</a></li>
@@ -44,7 +47,26 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">同步数据</a>                     
+                    <a href="#">报检操作</a>
+                    <ul>
+                        <li><a href="#">空运进口</a></li>
+                        <li><a href="#">空运出口</a></li>
+                        <li><a href="#">陆运进口</a></li>
+                        <li><a href="#">陆运出口</a></li>
+                        <li><a href="#">海运进口</a></li>
+                        <li><a href="#">海运出口</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">退单管理</a>
+                    <ul>
+                        <li><a href="#">空运进口</a></li>
+                        <li><a href="#">空运出口</a></li>
+                        <li><a href="#">陆运进口</a></li>
+                        <li><a href="#">陆运出口</a></li>
+                        <li><a href="#">海运进口</a></li>
+                        <li><a href="#">海运出口</a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
