--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -68,6 +68,14 @@
                         <li><a href="#">海运出口</a></li>
                     </ul>
                 </li>
+                <li>
+                    <a href="#">后台管理</a>
+                    <ul>
+                        <li><a href="#">模块管理</a></li>
+                        <li><a href="#">用户管理</a></li>
+                        <li><a href="#">权限管理</a></li> 
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
