--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - 我的 ASP.NET 应用程序</title>
+    <title>关务系统</title>
     @if (IsSectionDefined("Styles"))
     {@RenderSection("Styles", required: false)}
     <link href="~/Content/bootstrap32/css/bootstrap.min.css" rel="stylesheet" />
@@ -14,6 +14,7 @@
     @Styles.Render("~/font-awesome3.2/css")
     @Styles.Render("~/easyui/css")
     <script src="~/js/jquery-1.8.2.min.js"></script>
+    <script src="~/Content/bootstrap32/js/bootstrap.min.js"></script>
     <script src="~/js/hoverIntent.js"></script>
     <script src="~/js/superfish.js"></script>
     <link href="~/Content/iconfont/iconfont.css" rel="stylesheet" />
@@ -73,7 +74,7 @@
                     <ul>
                         <li><a href="#">模块管理</a></li>
                         <li><a href="#">用户管理</a></li>
-                        <li><a href="#">权限管理</a></li> 
+                        <li><a href="#">权限管理</a></li>
                     </ul>
                 </li>
             </ul>
