--- a/Views/Order/Index.cshtml
+++ b/Views/Order/Index.cshtml
@@ -123,9 +123,8 @@
             onDblClickCell: function (index, field, value) {
                 var row = $('#dg').datagrid('getData').rows[index];
                 if (row.ID != "") {
-                    window.location.href = "/Order/Edit/ID=" + row.ID;
+                    window.location.href = "/Order/Edit?ID=" + row.ID;
                 }
-                debugger;
             }
         });
 
