--- a/Views/Order/Edit.cshtml
+++ b/Views/Order/Edit.cshtml
@@ -359,7 +359,7 @@
 <div id="" class="easyui-panel" title="报关单信息"
      data-options="collapsible:true">
 
-    <table id="dg" class="easyui-datagrid"
+    <table id="dg"  style="height:250px" class="easyui-datagrid"
            data-options=" rownumbers:true,
                                    dataType : 'json',
                                    method:'get',
