--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,8 +39,8 @@
                 <li>
                     <a href="#">关务操作</a>
                     <ul>
-                        <li><a href="#">空运进口</a></li>
-                        <li><a href="#">空运出口</a></li>
+                        <li><a href="/Order/AirIn_List">空运进口</a></li>
+                        <li><a href="/Order/AirOut_List">空运出口</a></li>
                         <li><a href="#">陆运进口</a></li>
                         <li><a href="#">陆运出口</a></li>
                         <li><a href="#">海运进口</a></li>
