--- a/Views/Order/AirOut_Edit.cshtml
+++ b/Views/Order/AirOut_Edit.cshtml
@@ -26,7 +26,7 @@
                     }
 
                     #OrderFrom table tr td .easyui-numberspinner {
-                         width: 200px;
+                        width: 200px;
                     }
 
                     #OrderFrom table tr td .easyui-combobox {
@@ -73,6 +73,7 @@
                     <input class="easyui-textbox" type="text" name="" disabled="disabled" />
                 </td>
             </tr>
+
             <tr>
                 <td>
                     <label for="GOODSNUM"> 总件数:</label>
@@ -91,52 +92,95 @@
                     <input class="easyui-textbox" type="text" name="DIVIDENO" disabled="disabled" />
                 </td>
             </tr>
+
             <tr>
+                <td>
+                    <label for="test"> 运输车号:</label>
+                    <input class="easyui-textbox" type="text" name="test" disabled="disabled" />
+                </td>
+                <td>
+                    <label for="DECLCARNO">报关车号:</label>
+                    <input class="easyui-textbox" type="text" name="DECLCARNO" disabled="disabled" />
+                </td>
+                <td>
+                    <label for="test">维护人:</label>
+                    <input class="easyui-textbox" type="text" name="test" disabled="disabled" />
+                </td>
+                <td>
+                    <label for="test">维护时间:</label>
+                    <input class="easyui-textbox" type="text" name="test" disabled="disabled" />
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <label for="test"> 确认车号:</label>
+                    <input class="easyui-textbox" type="text" name="test" disabled="disabled" />
+                </td>
+                <td>
+                    <label for="test">确认车号维护人:</label>
+                    <input class="easyui-textbox" type="text" name="test" disabled="disabled" />
+                </td>
+                <td>
+                    <label for="test">确认车号维护时间:</label>
+                    <input class="easyui-textbox" type="text" name="test" disabled="disabled" />
+                </td>
+                <td>
+                    <label for="test">退关运输车号:</label>
+                    <input class="easyui-textbox" type="text" name="test" disabled="disabled" />
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <label for="test"> 通关方式:</label>
+                    <input class="easyui-textbox" type="text" name="test" disabled="disabled" />
+                </td>
                 <td>
                     <label for="CONTRACTNO"> 合同/发票号:</label>
                     <input class="easyui-textbox" type="text" name="CONTRACTNO" disabled="disabled" />
                 </td>
                 <td>
-                    <label for="TURNPRENO">转关预录号:</label>
-                    <input class="easyui-textbox" type="text" name="TURNPRENO" disabled="disabled" />
-                </td>
-                <td>
-                    <label for="">转关号:</label>
-                    <input class="easyui-textbox" type="text" name="" disabled="disabled" />
-                </td>
-                <td>
-                    <label for="">接单备注:</label>
-                    <input class="easyui-textbox" type="text" name="" disabled="disabled" />
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <label for=""> 报检接单日期:</label>
-                    <input class="easyui-textbox" type="text" name="" disabled="disabled" />
-                </td>
-                <td>
-                    <div style="text-align:center">
-                        快件:
-                        <input class="" type="radio" name="" disabled="disabled" />
-                        普货:
-                        <input class="" type="radio" name="" disabled="disabled" />
-
-                        <input style="margin-left:30px;" type="checkbox" name="" disabled="disabled" /> 通关单否
-                    </div>
-                </td>
-                <td>
-                    <label for="CLEARANCENO">通关单号:</label>
-                    <input class="easyui-textbox" type="text" name="CLEARANCENO" disabled="disabled" />
+                    <label for="GOODSTYPEID">货物类型:</label>
+                    <input class="easyui-textbox" type="text" name="GOODSTYPEID" disabled="disabled" />
                 </td>
                 <td>
                     <label for="ZUOYEDANTIME">作业单时间:</label>
                     <input class="easyui-textbox" type="text" name="ZUOYEDANTIME" disabled="disabled" />
                 </td>
             </tr>
+
+
             <tr>
                 <td>
-                    <label for=""> 制单备注:</label>
+                    <label for="TURNPRENO">转关预录号:</label>
+                    <input class="easyui-textbox" type="text" name="TURNPRENO" disabled="disabled" />
+                </td>
+
+                <td>
+                    <label for=""> 报检接单日期:</label>
                     <input class="easyui-textbox" type="text" name="" disabled="disabled" />
+                </td>
+
+                <td>
+                    <label for="">制单备注:</label>
+                    <input class="easyui-textbox" type="text" name="" disabled="disabled" />
+                </td>
+
+                <td>
+                    <label for="">接单备注:</label>
+                    <input class="easyui-textbox" type="text" name="" disabled="disabled" />
+                </td>
+
+            </tr>
+            <tr>
+                <td>
+                    <input style="margin-left:30px;" type="checkbox" name="" disabled="disabled" /> 通关单否
+                </td>
+
+                <td>
+                    <label for="CLEARANCENO">通关单号:</label>
+                    <input class="easyui-textbox" type="text" name="CLEARANCENO" disabled="disabled" />
                 </td>
                 <td>
                     <label for="GUOJITIME">过机时间:</label>
@@ -146,11 +190,16 @@
                     <label for="GUOJIUSERNAME">过机人:</label>
                     <input class="easyui-textbox" type="text" name="GUOJIUSERNAME" disabled="disabled" />
                 </td>
-                <td>
-                    <label for="REPUNITCODE">报关行:</label>
-                    <input class="easyui-textbox" type="text" name="REPUNITCODE" />
-                </td>
             </tr>
+
+            @*<tr>
+                <td>
+                    <label for=""> 制单备注:</label>
+                    <input class="easyui-textbox" type="text" name="" disabled="disabled" />
+                </td>
+
+
+            </tr>*@
 
         </table>
     </div>
@@ -202,6 +251,18 @@
 
 
             <tr>
+
+
+                <td>
+                    <label for="SHIWUJIAFENGTIME"> 实物加封时间:</label>
+                    <input class="easyui-textbox time_input" type="text" id="SHIWUJIAFENGTIME" name="SHIWUJIAFENGTIME" disabled="disabled" />
+                    <a href="javascript:void(0)" datatype="SHIWUJIAFENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                </td>
+                <td>
+                    <label for="SHIWUJIAFENGUSERNAME">实物加封人:</label>
+                    <input class="easyui-textbox " type="text" id="SHIWUJIAFENGUSERNAME" name="SHIWUJIAFENGUSERNAME" disabled="disabled" />
+                </td>
+
                 <td>
                     <label for="CHAYANSTARTTIME"> 查验起始时间:</label>
                     <input class="easyui-textbox time_input" type="text" id="CHAYANSTARTTIME" name="CHAYANSTARTTIME" disabled="disabled" />
@@ -211,6 +272,9 @@
                     <label for="CHAYANSTARTUSERNAME">起始查验人:</label>
                     <input class="easyui-textbox " type="text" id="CHAYANSTARTUSERNAME" name="CHAYANSTARTUSERNAME" disabled="disabled" />
                 </td>
+
+            </tr>
+            <tr>
                 <td>
                     <label for="CHAYANENDTIME"> 查验完成时间:</label>
                     <input class="easyui-textbox time_input" type="text" id="CHAYANENDTIME" name="CHAYANENDTIME" disabled="disabled" />
@@ -220,8 +284,7 @@
                     <label for="CHAYANENDUSERNAME">完成查验人:</label>
                     <input class="easyui-textbox " type="text" id="CHAYANENDUSERNAME" name="CHAYANENDUSERNAME" disabled="disabled" />
                 </td>
-            </tr>
-            <tr>
+
                 <td>
                     <label for="LIHUOSTARTTIME">理货起始时间:</label>
                     <input class="easyui-textbox time_input" type="text" id="LIHUOSTARTTIME" name="LIHUOSTARTTIME" disabled="disabled" />
@@ -231,6 +294,10 @@
                     <label for="LIHUOSTARTUSERNAME">理货起始人:</label>
                     <input class="easyui-textbox " type="text" id="LIHUOSTARTUSERNAME" name="LIHUOSTARTUSERNAME" disabled="disabled" />
                 </td>
+
+            </tr>
+            <tr>
+
                 <td>
                     <label for="LIHUOENDTIME">理货完成时间:</label>
                     <input class="easyui-textbox time_input" type="text" id="LIHUOENDTIME" name="LIHUOENDTIME" disabled="disabled" />
@@ -240,8 +307,7 @@
                     <label for="LIHUOENDUSERNAME">理货完成人:</label>
                     <input class="easyui-textbox " type="text" id="LIHUOENDUSERNAME" name="LIHUOENDUSERNAME" disabled="disabled" />
                 </td>
-            </tr>
-            <tr>
+
                 <td>
                     <label for="SHIWUFANGXINGTIME">实物放行时间:</label>
                     <input class="easyui-textbox time_input" type="text" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" disabled="disabled" />
@@ -252,6 +318,11 @@
                     <input class="easyui-textbox " type="text" id="SHIWUFANGXINGUSERNAME" name="SHIWUFANGXINGUSERNAME" disabled="disabled" />
                 </td>
 
+
+            </tr>
+
+
+            <tr>
                 <td>
                     <label for="CUSTOMDISTRICTCODE">申报关区:</label>
                     <input class="easyui-combobox" name="CUSTOMDISTRICTCODE" data-options="
@@ -271,7 +342,16 @@
                     <label for="DECLSTATUS">报关状态:</label>
                     <input class="easyui-textbox" type="text" name="DECLSTATUS" disabled="disabled" />
                 </td>
+                <td>
+                    <label for="REPUNITCODE">报关行:</label>
+                    <input class="easyui-textbox" type="text" name="REPUNITCODE" />
+                </td>
+                <td>
+                    <label for="test">出口口岸:</label>
+                    <input class="easyui-textbox" type="text" name="test"  disabled="disabled"/>
+                </td>
             </tr>
+
             <tr>
                 <td colspan="4">
                     <div style="float:left;height:22px;line-height:22px;">
@@ -359,7 +439,7 @@
 <div id="" class="easyui-panel" title="报关单信息"
      data-options="collapsible:true">
 
-    <table id="dg"  style="height:250px" class="easyui-datagrid"
+    <table id="dg" style="height:250px" class="easyui-datagrid"
            data-options=" rownumbers:true,
                                    dataType : 'json',
                                    method:'get'">
