--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,8 +43,8 @@
                         <li><a href="/Order/AirOut_List">空运出口</a></li>
                         <li><a href="#">陆运进口</a></li>
                         <li><a href="#">陆运出口</a></li>
-                        <li><a href="#">海运进口</a></li>
-                        <li><a href="#">海运出口</a></li>
+                        <li><a href="/Order/SeaIn_List">海运进口</a></li>
+                        <li><a href="/Order/SeaOut_List">海运出口</a></li>
                     </ul>
                 </li>
                 <li>
