--- a/Views/Order/SeaIn_Edit.cshtml
+++ b/Views/Order/SeaIn_Edit.cshtml
@@ -83,12 +83,12 @@
                     <input class="easyui-textbox" type="text" name="GOODSWEIGHT" disabled="disabled" />
                 </td>
                 <td>
-                    <label for="TOTALNO">总单号:</label>
-                    <input class="easyui-textbox" type="text" name="TOTALNO" disabled="disabled" />
+                    <label for="FIRSTLADINGBILLNO">一程提运单号:</label>
+                    <input class="easyui-textbox" type="text" name="FIRSTLADINGBILLNO" disabled="disabled" />
                 </td>
                 <td>
-                    <label for="DIVIDENO">分单号:</label>
-                    <input class="easyui-textbox" type="text" name="DIVIDENO" disabled="disabled" />
+                    <label for="SECONDLADINGBILLNO">二程提运单号:</label>
+                    <input class="easyui-textbox" type="text" name="SECONDLADINGBILLNO" disabled="disabled" />
                 </td>
             </tr>
             <tr>
@@ -98,14 +98,14 @@
                 </td>
                 <td>
                     <label for="TURNPRENO">转关预录号:</label>
-                    <input class="easyui-textbox" type="text" name="TURNPRENO" disabled="disabled" />
+                    <input class="easyui-textbox" type="text" name="TURNPRENO"  />
                 </td>
                 <td>
                     <label for="">转关号:</label>
                     <input class="easyui-textbox" type="text" name="" disabled="disabled" />
                 </td>
                 <td>
-                    <label for="">接单备注:</label>
+                    <label for="">转关方式:</label>
                     <input class="easyui-textbox" type="text" name="" disabled="disabled" />
                 </td>
             </tr>
@@ -116,9 +116,11 @@
                 </td>
                 <td>
                     <div style="text-align:center">
-                        快件:
+                        散货:
                         <input class="" type="radio" name="" disabled="disabled" />
-                        普货:
+                        整箱:
+                        <input class="" type="radio" name="" disabled="disabled" />
+                        拼箱:
                         <input class="" type="radio" name="" disabled="disabled" />
 
                         <input style="margin-left:30px;" type="checkbox" name="" disabled="disabled" /> 通关单否
@@ -129,15 +131,11 @@
                     <input class="easyui-textbox" type="text" name="CLEARANCENO" disabled="disabled" />
                 </td>
                 <td>
-                    <label for="ZUOYEDANTIME">作业单时间:</label>
-                    <input class="easyui-textbox" type="text" name="ZUOYEDANTIME" disabled="disabled" />
-                </td>
-            </tr>
-            <tr>
-                <td>
                     <label for=""> 制单备注:</label>
                     <input class="easyui-textbox" type="text" name="" disabled="disabled" />
                 </td>
+            </tr>
+            <tr>
                 <td>
                     <label for="GUOJITIME">过机时间:</label>
                     <input class="easyui-textbox" type="text" name="GUOJITIME" disabled="disabled" />
@@ -147,8 +145,12 @@
                     <input class="easyui-textbox" type="text" name="GUOJIUSERNAME" disabled="disabled" />
                 </td>
                 <td>
-                    <label for="REPUNITCODE">报关行:</label>
-                    <input class="easyui-textbox" type="text" name="REPUNITCODE" />
+                    <label for="">出关封时间:</label>
+                    <input class="easyui-textbox" type="text" name="text" disabled="disabled" />
+                </td>
+                <td>
+                    <label for="">出关封操作人:</label>
+                    <input class="easyui-textbox" type="text" name="text" disabled="disabled" />
                 </td>
             </tr>
 
