--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,6 +45,9 @@
                         <li><a href="/Order/LandOut_List">陆运出口</a></li>
                         <li><a href="/Order/SeaIn_List">海运进口</a></li>
                         <li><a href="/Order/SeaOut_List">海运出口</a></li>
+
+                        <li><a href="">叠加保税</a></li>
+                        <li><a href="">特殊监管</a></li>
                     </ul>
                 </li>
                 <li>
@@ -56,17 +59,14 @@
                         <li><a href="#">陆运出口</a></li>
                         <li><a href="#">海运进口</a></li>
                         <li><a href="#">海运出口</a></li>
+                        <li><a href="#">国内业务</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="#">退单管理</a>
                     <ul>
-                        <li><a href="#">空运进口</a></li>
-                        <li><a href="#">空运出口</a></li>
-                        <li><a href="#">陆运进口</a></li>
-                        <li><a href="#">陆运出口</a></li>
-                        <li><a href="#">海运进口</a></li>
-                        <li><a href="#">海运出口</a></li>
+                        <li><a href="#">退单管理</a></li>
+                        <li><a href="#">签收操作</a></li>
                     </ul>
                 </li>
                 <li>
