--- a/Views/Order/SeaIn_List.cshtml
+++ b/Views/Order/SeaIn_List.cshtml
@@ -28,53 +28,79 @@
     <div class="table-responsive">
         <table id="datagrid" class="easyui-datagrid" title="数据" style="height:auto;min-height:300px;max-height:800px;"
                data-options=" rownumbers:true,
-                                   url: '/Order/GetData',
+                                   url: '/Order/GetSeaInList',
                                    dataType : 'json',
                                    method:'get',
                                    toolbar:'#tb',
                                    pagination:true ">
             <thead data-options="frozen:true">
                 <tr>
-                    <th data-options="field: 'ID',width:80,checkbox:true"></th>
-                    <th data-options="field:'BUSIUNITNAME',sortable:true,width:200,align:'center'">收货人</th>
-                    <th data-options="field:'TURNPRENO',width:100,align:'center'">转关转录单号</th>
-                    <th data-options="field:'test',width:100,align:'center'">万达号</th>
-                    <th data-options="field:'GOODSNUM',width:50,align:'center'">总件数</th>
-                    <th data-options="field:'GOODSWEIGHT',width:50,align:'center'">总重量</th>
+                    <th data-options="field: 'ck', checkbox: true"></th>
+                    <th data-options="field:'CUSNO',width:120,sortable:true">收货人</th>
+                    <th data-options="field:'FIRSTLADINGBILLNO',width:100,sortable:true">一程提运单号</th>
+                    <th data-options="field:'SECONDLADINGBILLNO',width:80,align:'center'">二程提运单号</th>
+                    <th data-options="field:'GOODSNUM',width:80,align:'center',sortable:true">总件数</th>
+                    <th data-options="field:'GOODSWEIGHT',width:70,sortable:true">总重量</th>
                 </tr>
             </thead>
+
             <thead>
+
                 <tr>
-                    <th data-options="field:'DECLSHEETNUM',width:70,align:'center'">报关单张数</th>
-                    <th data-options="field:'LAWCONDITION',width:70,align:'center'">是否法检</th>
-                    <th data-options="field:'YWBH',width:100,align:'center'">业务编号</th>
-                    <th data-options="field:'ASSOCIATEPEDECLNO',width:180,align:'center'">报关单号</th>
+                    <th data-options="field:'DECLSHEETNUM',width:80,align:'center',sortable:true">报关单张数</th>
+                    <th data-options="field:'LAWCONDITION',width:80,sortable:true,align:'center'">是否法检</th>
+                    <th data-options="field:'ASSOCIATEPEDECLNO',width:120,sortable:true,align:'center'">报关单号</th>
                     <th data-options="field:'LIDANTIME',width:100,align:'center'">理单时间</th>
                     <th data-options="field:'BAOGUANTIME',width:100,align:'center'">报关时间</th>
                     <th data-options="field:'DANZHENGFANGXINGTIME',width:100,align:'center'">单证放行时间</th>
-                    <th data-options="field:'ASSOCIATETRADEWAY',width:150,align:'center'">贸易方式</th>
-                    <th data-options="field:'test',width:120,align:'center'">报关备注</th>
-                    @*<th data-options="field:'CLEARANCENO',width:180,align:'center'">通关单号</th>*@
-                    <th data-options="field:'LIDANUSERNAME',width:90,align:'center'">理单人</th>
-                    <th data-options="field:'test',width:100,align:'center'">单证齐全时间</th>
-                    <th data-options="field:'SHIWUFANGXINGTIME',width:100,align:'center'">实物放行时间</th>
-                    <th data-options="field:'STATUS',width:100,align:'center'">实物放行状态</th>
-                    <th data-options="field:'CONTRACTNO',width:100,align:'center'">合同/发票号</th>
-                    <th data-options="field:'test',width:100,align:'center'">接单备注</th>
-                    <th data-options="field:'ZUOYEDANTIME',width:100,align:'center'">作业单时间</th>
-                    <th data-options="field:'DANZHENGFANGXINGUSERNAME',width:100,align:'center'">单证放行人</th>
-                    <th data-options="field:'SHIWUFANGXINGUSERNAME',width:100,align:'center'">实物放行人</th>
-                    <th data-options="field:'test',width:100,align:'center'">关务状态</th>
-                    <th data-options="field:'PASSMODE',width:70,align:'center'">分批放行</th>
-                    <th data-options="field:'PASSMODE',width:70,align:'center'">申请放行</th>
-                    <th data-options="field:'test',width:100,align:'center'">OPS接单备注</th>
-                    <th data-options="field:'test',width:100,align:'center'">OPS接单时间</th>
-                    <th data-options="field:'CUSTOMDISTRICTCODE',width:100,align:'center'">申报关区</th>
-                    <th data-options="field:'test',width:100,align:'center'">海关通关状态</th>
-                    <th data-options="field:'test',width:100,align:'center'">签收号</th>
-                    <th data-options="field:'test',width:100,align:'center'">签收人</th>
-                    <th data-options="field:'test',width:100,align:'center'">签收日期</th>
+                    <th data-options="field:'ASSOCIATETRADEWAY',width:100,align:'center'">贸易方式</th>
+                    <th data-options="field:'attr1',width:100,align:'center'">报关备注</th>
+                    <th data-options="field:'attr1',width:100,align:'center'">放行时间</th>
+                    <th data-options="field:'attr1',width:100,align:'center'">理单人</th>
+                    <th data-options="field:'attr1',width:100,align:'center'">单证齐全时间</th>
+                    <th data-options="field:'SHIWUFANGXINGTIME',width:100,sortable:true,align:'center'">实物放行时间</th>
+                    <th data-options="field:'attr1',width:100,sortable:true">实物放行状态</th>
+                    <th data-options="field:'YWBH',width:100,sortable:true">业务编号</th>
+                    <th data-options="field:'CONTRACTNO',width:100,sortable:true">合同/发票号</th>
+                    <th data-options="field:'TURNPRENO',width:70,sortable:true">转关预录入号</th>
+                    <th data-options="field:'attr1',width:70,sortable:true">转关号</th>
+                    <th data-options="field:'CUSTOMDISTRICTCODE',width:70,sortable:true">申报关区</th>
+                    <th data-options="field:'attr1',width:70">OPS接单备注</th>
+                    <th data-options="field:'attr1',width:100">是否有作业单齐全时间</th>
+                    <th data-options="field:'attr1',width:100">作业单齐全时间</th>
+                    <th data-options="field:'DANZHENGFANGXINGUSERNAME',width:100">单证放行人</th>
+                    <th data-options="field:'SHIWUFANGXINGUSERNAME',width:100">实物放行人</th>
+                    <th data-options="field:'attr1',width:100">关务状态</th>
+                    <th data-options="field:'attr1',width:100">分批放行</th>
+                    <th data-options="field:'PASSMODE',width:100">申请放行</th>
+                    <th data-options="field:'CUSTOMDISTRICTCODE',width:100">关区代码</th>
+                    <th data-options="field:'attr1',width:100">平台编号</th>
+                    <th data-options="field:'attr1',width:100">关务编号</th>
+                    <th data-options="field:'CLEARUNITNAME',width:100,sortable:true">结算方</th>
+                    <th data-options="field:'attr1',width:100">报检接单时间</th>
+                    <th data-options="field:'attr1',width:100">通关单标志</th>
+                    <th data-options="field:'attr1',width:100">报检标志</th>
+                    <th data-options="field:'attr1',width:100">制单备注</th>
+                    <th data-options="field:'GUOJIUSERNAME',width:100">过机人</th>
+                    <th data-options="field:'BAOGUANUSERNAME',width:100">报关人</th>
+                    <th data-options="field:'attr1',width:100">手册在否</th>
+                    <th data-options="field:'attr1',width:100">手册号</th>
+                    <th data-options="field:'attr1',width:100">出保</th>
+                    <th data-options="field:'attr1',width:100">OPS接单人</th>
+                    <th data-options="field:'attr1',width:100">OPS接单时间</th>
+                    <th data-options="field:'attr1',width:100">出关封时间</th>
+                    <th data-options="field:'attr1',width:100">口岸放行时间</th>
+                    <th data-options="field:'attr1',width:100">口岸安排报关时间</th>
+                    <th data-options="field:'attr1',width:100">通关状态</th>
+                    <th data-options="field:'attr1',width:100">操作点</th>
+                    <th data-options="field:'attr1',width:100">海关通关状态</th>
+                    <th data-options="field:'attr1',width:100">签收号</th>
+                    <th data-options="field:'attr1',width:100">签收人</th>
+                    <th data-options="field:'attr1',width:100">签收日期</th>
                 </tr>
+
+
+
             </thead>
         </table>
 
@@ -205,23 +231,7 @@
 
 <script type="text/javascript">
 
-    $(document).ready(function () {
 
-        //debugger;
-        //$('#dg').datagrid('loadData', {
-        //    "total": 50
-        //});
-
-
-
-    })
-
-
-    function Edit() {
-
-        debugger;
-
-    }
 
     $(function () {
 
@@ -230,11 +240,61 @@
             onDblClickCell: function (index, field, value) {
                 var row = $('#datagrid').datagrid('getData').rows[index];
                 if (row.ID != "") {
-                    window.location.href = "/Order/LandOut_Edit?ID=" + row.ID;
+                    window.location.href = "/Order/SeaIn_Edit?ID=" + row.ID;
                 }
             }
         });
 
     });
 
+
+
+    //给所有列指定排序属性
+    function initDataGrid(grid) {
+        var columns = $('#dg').datagrid("options").columns[0];
+        for (i = 0; i < columns.length; i++) {
+            columns[i].sortable = true;
+        }
+    }
+
+
+    //绑定排序
+    $("#datagrid").datagrid({
+        onSortColumn: function (sort, order) {
+            loadlistgrid(sort, order);
+        }
+    });
+
+
+
+
+    $("#submit_search").click(function () {
+        //$('#dg').datagrid({queryParams:form2Json("searchform")});   //点击搜索
+        $('#gd').datagrid('load', form2Json("searchform"));
+    });
+
+    function form2Json(id) {
+        var arr = $("#" + id).serializeArray()
+        var jsonStr = "";
+
+        jsonStr += '{';
+        for (var i = 0; i < arr.length; i++) {
+            jsonStr += '"' + arr[i].name + '":"' + arr[i].value + '",'
+        }
+        jsonStr = jsonStr.substring(0, (jsonStr.length - 1));
+        jsonStr += '}'
+
+        var json = JSON.parse(jsonStr)
+        return json
+    }
+
+    function doSearch() {
+        $('#datagrid').datagrid('load', {
+            //CUSNO: $('#CUSNO').val(),
+            //CONTRACTNO: $('#CONTRACTNO').val()
+            cusSearch: form2Json("searchform")
+        });
+    }
 </script>
+
+
