--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,7 +18,8 @@
     <script src="~/js/hoverIntent.js"></script>
     <script src="~/js/superfish.js"></script>
     <link href="~/Content/iconfont/iconfont.css" rel="stylesheet" />
-    @Scripts.Render("~/easyui/js")
+        @Scripts.Render("~/easyui/js")
+    <script src="~/js/commondata.js"></script>
 </head>
 <body>
     <div class="container">
