--- a/Views/Order/SeaIn_Edit.cshtml
+++ b/Views/Order/SeaIn_Edit.cshtml
@@ -310,6 +310,10 @@
                     <label for="">查验备注:</label>
                     <input class="easyui-textbox" type="text" name="CHAYANREMARK" />
                 </td>
+                <td>
+                    <label for="">报关行:</label>
+                    <input class="easyui-textbox" type="text" name="REPUNITCODE" />
+                </td>
             </tr>
             <tr>
                 <td style="text-align:left">
