--- a/Views/Order/SeaIn_List.cshtml
+++ b/Views/Order/SeaIn_List.cshtml
@@ -28,7 +28,7 @@
     <div class="table-responsive">
         <table id="datagrid" class="easyui-datagrid" title="数据" style="height:auto;min-height:300px;max-height:800px;"
                data-options=" rownumbers:true,
-                                   url: '/Order/GetSeaInList',
+                                   url: '/Order/GetData',
                                    dataType : 'json',
                                    method:'get',
                                    toolbar:'#tb',
