--- a/Views/Order/AirOut_Edit.cshtml
+++ b/Views/Order/AirOut_Edit.cshtml
@@ -529,7 +529,7 @@
         }
 
         $('#OrderFrom').form({ onLoadSuccess: loadsucc });
-        $('#OrderFrom').form('load', '/Order/Init_Base_Data?ID=' + ID);
+        $('#OrderFrom').form('load', '/Order/Edit_Order?ID=' + ID);
 
 
         $('.fillingData').click(function () {
