--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                         <li><a href="/Order/SeaIn_List">海运进口</a></li>
                         <li><a href="/Order/SeaOut_List">海运出口</a></li>
                         <li><a href="">叠加保税</a></li>
-                        <li><a href="">特殊监管</a></li>
+                        <li><a href="/Order/SpecialSupervision_List">特殊监管</a></li>
                     </ul>
                 </li>
                 <li>
