导入国内DEMO数据

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
         <div style="height: 36px; background-color: #CFDEFF;width:100%">
             <ul class="sf-menu" id="na_menu" style="font-size:14px">
                 <li>
-                    <a href="#">首页</a>
+                    <a href="">首页</a>
                 </li>
                 @*@Html.Action("Header", "Common")/Common/ImportOrder?busitype=11*@
                 <li>
